// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pane bottom pane 'should render both ExpandButtons by default 1`] = `
<Styled(withStrippedProps(Panel))
  expandState="DEFAULT"
  handleExpand={[MockFunction]}
  paneId="BOTTOM"
  titles={
    Object {
      "bottom": "Bottom",
      "top": "Top",
    }
  }
>
  <CollapsablePanelConsumer>
    <Component />
  </CollapsablePanelConsumer>
  <Foo
    expandState="DEFAULT"
    key=".0"
  />
</Styled(withStrippedProps(Panel))>
`;

exports[`Pane bottom pane 'should render both ExpandButtons by default 2`] = `
Array [
  <Styled(ExpandButton)
    direction="DOWN"
    onClick={[Function]}
    title="Expand Top pane"
  />,
  <Styled(ExpandButton)
    direction="UP"
    onClick={[Function]}
    title="Expand Bottom pane"
  />,
]
`;

exports[`Pane bottom pane should render ExpandButton with DOWN icon if pane is expanded' 1`] = `
<Styled(withStrippedProps(Panel))
  expandState="EXPANDED"
  handleExpand={[MockFunction]}
  paneId="BOTTOM"
  titles={
    Object {
      "bottom": "Bottom",
      "top": "Top",
    }
  }
>
  <CollapsablePanelConsumer>
    <Component />
  </CollapsablePanelConsumer>
  <Foo
    expandState="EXPANDED"
    key=".0"
  />
</Styled(withStrippedProps(Panel))>
`;

exports[`Pane bottom pane should render ExpandButton with DOWN icon if pane is expanded' 2`] = `
<Styled(ExpandButton)
  direction="DOWN"
  onClick={[Function]}
  title="Expand Top pane"
/>
`;

exports[`Pane bottom pane should render ExpandButton with UP icon if pane is collapsed 1`] = `
<Styled(withStrippedProps(Panel))
  expandState="COLLAPSED"
  handleExpand={[MockFunction]}
  paneId="BOTTOM"
  titles={
    Object {
      "bottom": "Bottom",
      "top": "Top",
    }
  }
>
  <CollapsablePanelConsumer>
    <Component />
  </CollapsablePanelConsumer>
  <Foo
    expandState="COLLAPSED"
    key=".0"
  />
</Styled(withStrippedProps(Panel))>
`;

exports[`Pane bottom pane should render ExpandButton with UP icon if pane is collapsed 2`] = `
<Styled(ExpandButton)
  direction="UP"
  onClick={[Function]}
  title="Expand Bottom pane"
/>
`;

exports[`Pane should render children with expandState 1`] = `
<Styled(withStrippedProps(Panel))
  expandState="EXPANDED"
  handleExpand={[MockFunction]}
  paneId="TOP"
  titles={
    Object {
      "bottom": "Bottom",
      "top": "Top",
    }
  }
>
  <Foo
    expandState="EXPANDED"
    key=".0"
  />
</Styled(withStrippedProps(Panel))>
`;

exports[`Pane top pane should not render expand buttons 1`] = `
<Styled(withStrippedProps(Panel))
  expandState="COLLAPSED"
  handleExpand={[MockFunction]}
  paneId="TOP"
  titles={
    Object {
      "bottom": "Bottom",
      "top": "Top",
    }
  }
>
  <Foo
    expandState="COLLAPSED"
    key=".0"
  />
</Styled(withStrippedProps(Panel))>
`;
